<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bootstrap</string>
    <string name="title">Android Bootstrap</string>
    <string name="blank"></string>
    <string name="title_placeholder">Loading...</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="list">list</string>
    <string name="toast">Toast</string>
    <string name="alert">Show Dialog</string>
    <string name="request">Request</string>
    <string name="switchbutton">Switch Scene</string>
    <string name="webview">Webview</string>
    <string name="username_tips">please input username</string>
    <string name="password_tips">please input password</string>
</resources>