<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/list_button"
            android:contentDescription="contentdesctest"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/round_corner_bg"
            android:gravity="center_vertical|center"
            android:text="@string/list"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/webview_button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:background="@drawable/round_corner_bg"
            android:contentDescription="contentdesctest"
            android:gravity="center_vertical|center"
            android:text="@string/webview"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>
</LinearLayout>