<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <Button
            android:id="@+id/request"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/round_corner_bg"
            android:gravity="center_vertical|center"
            android:text="@string/request"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <Button
            android:id="@+id/switchbutton"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/round_corner_bg"
            android:gravity="center_vertical|center"
            android:text="@string/switchbutton"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="20dp"
            android:minHeight="200dp"
            android:background="@color/aliceblue"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/blank" />
    </LinearLayout>
</LinearLayout>