<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25dp"
            android:text="@string/title" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/topline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/login_layout_bg"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/mobileNoEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.52"
            android:background="@null"
            android:hint="@string/username_tips"
            android:inputType="textNoSuggestions"
            android:orientation="horizontal"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_layout_bg"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/codeEditText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="2dp"
            android:layout_weight="0.98"
            android:background="@null"
            android:digits="0123456789"
            android:hint="@string/password_tips"
            android:inputType="textNoSuggestions"
            android:orientation="horizontal"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/round_corner_bg"
            android:gravity="center_vertical|center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </LinearLayout>

</LinearLayout>